Bug 326095 - Side by side view for multiple accounts stays grey (merged view works)
Summary: Side by side view for multiple accounts stays grey (merged view works)
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: 4.11.2
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-16 13:26 UTC by itsef-admin
Modified: 2013-10-19 01:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description itsef-admin 2013-10-16 13:26:03 UTC
Fresh Kontact install (KDE 4.11.2 on Kubuntu 13.10beta) with three Kolab v2 accounts. I have KOrganizer configured to "Switch between views with tabs". In the "Merged calendar" tab, I can see all events from the three calendars (I have used different colours for the different calendars, so it's easy to distinguish them). When I switch to the "Calendars Side by side" tab, only the time scale with the hours is visible on the left hand side of the tab - the rest of the tab is the same grey as the frame/background - i.e. there is no calendar to be seen at all.

I think I had that working at some point before and I'm not 100% certain when it stopped working. However, I did loose the Calendar folder of one of the accounts yesterday and it took me quite some effort to get it back (see http://lists.kde.org/?l=kdepim-users&m=138184927611423&w=2 for more info). I have no idea whether this is related, but I thought I'd mention it just in case.


Reproducible: Always
Comment 1 Sergio Martins 2013-10-16 13:49:12 UTC
I'll try to fix it for 4.11.3
Comment 2 itsef-admin 2013-10-17 08:16:16 UTC
That would be brilliant, as this would be a show-stopper for several of our users. If you need any more information/testing from me, please let me know.

I've just tried a couple of things in the hope that they may be helpful for you:
I have a second Linux-account for testing which uses the same Kolab-accounts (obviously, I only use one Linux-account at a time to avoid cross influence). This Linux-account was set up totally from scratch, so no old files that could influence behaviour.

In the test account, I had only two of the Kolab V2 accounts configured so far. When I tried side by side view, it worked normally. I then proceeded to add the third Kolab V2 account, waited until all folders had been read, then at some point re-started Kontact. After that, side by side view showed the same problem as in the main Linux-account I was using.

Next thing I tried was to delete the third account again, fetch mail, re-start Kontact. Presto: Side-by-side worked again.

Subsequently, I set the permissions on the Calendar folder of the third Kolab V2-account so that I could subscribe with one of the other two Kolab-V2 accounts. I then added that folder, fetch mail, Kontact restart => Calendar visible as sub-folder of one of the other calendar and side-by-side stopped working again.

And as a final test, I removed the shared calendar again (fetch, re-start, ... as before) => side-by-side works again. Then I added an ICS file as third calendar to see whether it's a Kolab problem. BUT: As soon as the third calendar was established, side-by-side stopped working again...

It looks almost as if side-by-side fails if there are more than two calendars.

In all situations, disabling one or more of the calendars in calendar view (uncheck the box next to it) does not make side-by-side view work.

Regards,
Thomas
Comment 3 Sergio Martins 2013-10-19 00:02:29 UTC
Git commit 8fec0cca643d1e82fc5c50f5927604c24508667f by Sergio Martins.
Committed on 18/10/2013 at 23:54.
Pushed by smartins into branch 'KDE/4.11'.

Don't create the custom collection selections if it's disabled.

Check mCustomColumnSetupUsed before executing code regarding
this feature.

M  +32   -26   calendarviews/multiagenda/multiagendaview.cpp

http://commits.kde.org/kdepim/8fec0cca643d1e82fc5c50f5927604c24508667f
Comment 4 Sergio Martins 2013-10-19 00:02:29 UTC
Git commit be32399840d36531e161dbf1e53901110f1ae865 by Sergio Martins.
Committed on 18/10/2013 at 23:58.
Pushed by smartins into branch 'KDE/4.11'.

Fix side-by-side view.

Agendas weren't being created because it wasn't listening to
signals about them being checked or unchecked.

Still not happy about it, somethings weird with the default
sizes for the all day agenda, it appears too big at first.

M  +12   -0    calendarviews/multiagenda/multiagendaview.cpp
M  +1    -0    calendarviews/multiagenda/multiagendaview.h
M  +1    -1    korganizer/koviewmanager.cpp

http://commits.kde.org/kdepim/be32399840d36531e161dbf1e53901110f1ae865
Comment 5 Sergio Martins 2013-10-19 00:50:53 UTC
Git commit 68d3eb94c2ab4a8c1e93273d86da396eecc82af2 by Sergio Martins.
Committed on 19/10/2013 at 00:48.
Pushed by smartins into branch 'KDE/4.11'.

side-by-side: Fix splitter sizes.

When checking a calendar, all existing views were updated to
the sizes of the new agenda. It should be the other way around
the new one should get the size of existing ones.

mLeftSplitter and mRightSplitter are the only splitters that
aren't destroyed each time you check a calendar, so use that
as a reference.

M  +1    -1    calendarviews/multiagenda/multiagendaview.cpp

http://commits.kde.org/kdepim/68d3eb94c2ab4a8c1e93273d86da396eecc82af2
Comment 6 Sergio Martins 2013-10-19 01:28:31 UTC
Git commit e0e3e13147c3e27fd9c090c21642570d2f82a4da by Sergio Martins.
Committed on 19/10/2013 at 01:26.
Pushed by smartins into branch 'KDE/4.11'.

Don't flicker when checking/unchecking calendars.

M  +1    -1    calendarviews/multiagenda/multiagendaview.cpp

http://commits.kde.org/kdepim/e0e3e13147c3e27fd9c090c21642570d2f82a4da