Don't flicker when checking/unchecking calendars.

BUG: 326095